Created buttons and basic layout. Also added js selectors, basic operation functions, and event delegation for buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,43 @@
 </head>
 
 <body>
-    <h1>Calculator</h1>
+    <div class="container">
+        <div class="display">
+
+        </div>
+        <div class="row">
+            <button id="AC">AC</button>
+            <button id="negate">+/-</button>
+            <button id="percent">%</button>
+            <button id="divide">/</button>
+        </div>
+
+        <div class="row">
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="multiply">*</button>
+        </div>
+
+        <div class="row">
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="subtract">-</button>
+        </div>
+
+        <div class="row">
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="add">+</button>
+        </div>
+        <div class="row">
+            <button id="zero">0</button>
+            <button id="decimal">.</button>
+            <button id="equals" class="double-wide">=</button>
+        </div>
+    </div>
     <script src="javascript.js"></script>
 </body>
 
