Get basic calculations working again

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row">
             <button id="zero">0</button>
             <button id="decimal">.</button>
-            <button id="equals" class="double-wide">=</button>
+            <button id="compute" class="double-wide">=</button>
         </div>
     </div>
     <script src="javascript.js"></script>
