Add backspace button and eraseLastNum() function

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class="row">
             <button id="zero">0</button>
             <button id="decimal">.</button>
-            <button id="compute" class="double-wide">=</button>
+            <button id="backspace">
+                < </button>
+                    <button id="compute">=</button>
         </div>
     </div>
     <script src="javascript.js"></script>
