--- a/index.html
+++ b/index.html
@@ -14,38 +14,37 @@
 
         </div>
         <div class="row">
-            <button id="AC">AC</button>
-            <button id="negate">+/-</button>
-            <button id="percent">%</button>
-            <button id="divide">/</button>
+            <button id="AC" class="button">AC</button>
+            <button class="double-wide"></button>
+            <button id="divide" class="button">/</button>
         </div>
 
         <div class="row">
-            <button id="seven">7</button>
-            <button id="eight">8</button>
-            <button id="nine">9</button>
-            <button id="multiply">*</button>
+            <button id="seven" class="button">7</button>
+            <button id="eight" class="button">8</button>
+            <button id="nine" class="button">9</button>
+            <button id="multiply" class="button">*</button>
         </div>
 
         <div class="row">
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="subtract">-</button>
+            <button id="four" class="button">4</button>
+            <button id="five" class="button">5</button>
+            <button id="six" class="button">6</button>
+            <button id="subtract" class="button">-</button>
         </div>
 
         <div class="row">
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="add">+</button>
+            <button id="one" class="button">1</button>
+            <button id="two" class="button">2</button>
+            <button id="three" class="button">3</button>
+            <button id="add" class="button">+</button>
         </div>
         <div class="row">
-            <button id="zero">0</button>
-            <button id="decimal">.</button>
-            <button id="backspace">
+            <button id="zero" class="button">0</button>
+            <button id="decimal" class="button">.</button>
+            <button id="backspace" class="button">
                 < </button>
-                    <button id="compute">=</button>
+                    <button id="compute" class="button">=</button>
         </div>
     </div>
     <script src="javascript.js"></script>
