Tidied up naming and helper functions

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="container">
-        <div class="display">
 
-        </div>
+        <div class="display"></div>
+
         <div class="row">
             <button id="AC" class="button">AC</button>
             <button class="double-wide"></button>
@@ -39,6 +39,7 @@
             <button id="three" class="button">3</button>
             <button id="add" class="button">+</button>
         </div>
+
         <div class="row">
             <button id="zero" class="button">0</button>
             <button id="decimal" class="button">.</button>
@@ -46,7 +47,9 @@
                 < </button>
                     <button id="compute" class="button">=</button>
         </div>
+
     </div>
+
     <script src="javascript.js"></script>
 </body>
 
